--- a/static/summernote/summernote-lite.css
+++ b/static/summernote/summernote-lite.css
@@ -71,3 +71,7 @@
 .sn-checkbox-use-protocol input {
     margin-right: 10px !important;
 }
+
+.note-editor .note-editable {
+    line-height: 1;
+}
